added tools and fixed some links

--- a/templates/master.html
+++ b/templates/master.html
@@ -53,7 +53,7 @@
 		<div class="dropdown-content">
 			<a href="/Tools/VTT">Virtual Tabletop</a>
 			<a href="/Tools/NPC-Gen">NPC Generator</a>
-			<a href="/Tools/Backstory">Backstory Generator</a>
+			<a href="/Tools/Backstory-Gen">Backstory Generator</a>
 			<a href="/Tools/CR-Calc">CR Calculator</a>
 			<a href="/Tools/Encounter-Gen">Encounter Generator</a>
 			<a href="/Tools/Loot-Gen">Loot Generator</a>
