--- a/website/templates/master.html
+++ b/website/templates/master.html
@@ -24,15 +24,15 @@
 		</div>
 	</li>
 	<li id="nav-char" class="dropdown nav-item">
-		<a href="/Characters" class="dropbtn">Characters</a>
+		<a href="/Character" class="dropbtn">Characters</a>
 		<div class="dropdown-content">
-			<a href="/Characters/Races">Races</a>
-			<a href="/Characters/Backgrounds">Backgrounds</a>
-			<a href="/Characters/Feats">Feats</a>
-			<a href="/Characters/Other">Other Options</a>
-			<a href="/Characters/Stats">Character Stats</a>
-			<a href="/Characters/Backstory">Backstory Generator</a>
-			<a href="/Characters/Name">Name</a>
+			<a href="/Character/Races">Races</a>
+			<a href="/Character/Backgrounds">Backgrounds</a>
+			<a href="/Character/Feats">Feats</a>
+			<a href="/Character/Other">Other Options</a>
+			<a href="/Character/Stats">Character Stats</a>
+			<a href="/Character/Backstory">Backstory Generator</a>
+			<a href="/Character/Name">Name</a>
 		</div>
 	</li>
 	<li id="nav-qref" class="dropdown nav-item">
