--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -2,25 +2,56 @@
 
 {% block head %}
 <title>Sign Up | Wayfinder</title>
+<script src="{{ url_for('static', filename='js/signup.js') }}"></script>
 {% endblock %}
-
 {% block body %}
 <div class="flex">
-	<div class="flex vertical start">
+	<div class="flex vertical start" x-data="form">
 		<h1>Sign Up</h1>
-		<form class="interior flex vertical start">
+		<form class="interior flex vertical start" method="post">
 			<div class="interior flex horizontal center">
-				<input type="text" name="username" id="su-uname" placeholder="Username">
+				<input 
+					type="text" 
+					name="username" 
+					id="su-uname" 
+					placeholder="Username" 
+					x-model="username"
+				>
 			</div>
 			<div class="interior flex horizontal center">
-				<input type="text" name="email" id="su-email" placeholder="Email (Optional)">
+				<input 
+					type="text" 
+					name="email" 
+					id="su-email" 
+					placeholder="Email (Optional)" 
+					x-model="email"
+				>
+			</div>
+			<span :class="emailempty()" style="--color1: var(--nord-orange); --color2: var(--nord-text)">An email is strongly recommended; without one you will not be able to recover your account should you lose your password.</span>
+			<div class="interior flex horizontal center">
+				<input 
+					type="password" 
+					name="password1" 
+					id="password1" 
+					placeholder="Password"
+					x-model="password1"
+					:class="passwdmatch()[0]"
+					x-ref="password1"
+				>
 			</div>
 			<div class="interior flex horizontal center">
-				<input type="password" name="password" id="su-password" placeholder="Password">
+				<input 
+					type="password" 
+					name="password2" 
+					id="cpassword2" 
+					placeholder="Confirm Password"
+					x-model="password2"
+					:class="passwdmatch()[0]"
+					x-ref="password2"
+				>
 			</div>
-			<div class="interior flex horizontal center">
-				<input type="password" name="cpassword" id="su-cpassword" placeholder="Confirm Password">
-			</div>
+			<span class="small">Already have an account? <a href="/Login">Log in!</a></span>
+			<span :class="passwdmatch()[1]" style="--color1: var(--nord-red); --color2: var(--nord-text)">Passwords do not match</span>
 			<div class="interior flex horizontal center">
 				<input type="submit">
 			</div>
