--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -106,10 +106,10 @@ body {
     margin: 0;
 }
 
-button, input, select {
+button, input, select, textarea {
     border-style: solid;
     padding: 16px 32px;
-    text-align: center;
+    text-align: left;
     text-decoration: inline-block;
     font-size: 24px;
     margin: auto;
@@ -224,13 +224,18 @@ template, template.vertical, template.horizontal {
     justify-content: space-between;
 }
 
+.flex.wide {
+    width: calc(100% - 100px)!important
+}
+
 /* GRID CONTAINERS */
 .grid {
     width: 100%;
     background-color: var(--nord-inactive);
     border-radius: 12px;
     display: grid;
-    grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto
+    grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto auto;
+    gap: 12px;
 }
 
 .grid.space-evenly {
@@ -415,8 +420,12 @@ button.danger {
     margin: auto;
 }*/
 
-form input, form button {
+form * {
     margin: 12px;
+}
+
+textarea {
+    font-size: 16px
 }
 
 .inline {
