--- a/website/templates/create-ruleset.html
+++ b/website/templates/create-ruleset.html
@@ -9,7 +9,7 @@
 <div class="flex">
 	<div class="flex vertical start">
 		<h1>Create a Ruleset</h1>
-		<form method="POST" class="grid space-between">
+		<form method="POST" class="grid space-evenly">
 			<input 
 				type="text" 
 				placeholder="Ruleset Name" 
@@ -24,7 +24,7 @@
 			<select
 				name="shareable" 
 				id="shareable"
-				style="grid-column: 9 / span 4">
+				style="grid-column: 9 / span 3">
 				<option value="True">Yes</option>
 				<option value="False">No</option>
 			</select>
