--- a/website/templates/rules.html
+++ b/website/templates/rules.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="wide flex">
+<div class="flex">
 	<div class="wide flex vertical start">
 		<h1>Pinned Rules</h1>
 		{% if cruleset.id == 1 %}
