--- a/website/templates/manage-ruleset.html
+++ b/website/templates/manage-ruleset.html
@@ -48,8 +48,7 @@
 	</div>
 </div>
 
-<div class="modal" :style="show" @click="toggle()">
-</div>
+<div class="modal" :style="show" @click="toggle()"></div>
 <div class="modal-alert flex vertical start" :style="show">
 	<h2>Delete Ruleset?</h2>
 	<p>Deleting this ruleset will result in it being lost forever (a very long time).</p>
