--- a/website/templates/master.html
+++ b/website/templates/master.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 	<script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
+	<script src="{{ url_for('static', filename='js/master.js') }}"></script>
 	{% block head %}{% endblock %}
 </head>
 
@@ -90,13 +91,21 @@
 		{% endfor %}
 	{% endif %}
 {% endwith %}
-
-<!--<form class="flex horizontal center" style="margin: 25px auto" x-data="main">
-	<select name="current_ruleset" id="current_ruleset" x-model="selected">
-		<option value="ruleset.id"></option>
-		<option value="ruleset.id"></option>
-	</select>
-</form>-->
+<ul class="topbar" x-data="master">
+	<li class="static"><p>Selected Ruleset: </p></li>
+	<li>
+		<select name="current_ruleset" id="current_ruleset" x-model="selected" x-init="init_selected()">
+			<option value="1">5e SRD</option>
+			{% for ruleset in user.rulesets %}
+			<option value="{{ ruleset.id }}">{{ ruleset.name }}</option>
+			{% endfor %}
+			{% for ruleset in frulesets %}
+			<option value="{{ ruleset.id }}">{{ ruleset.name }}</option>
+			{% endfor %}
+		</select>
+	</li>
+	<li><a @click="test()">Change Rulesets</a></li>
+</ul>
 {% block body %}{% endblock %}
 </body>
 </html>
