--- a/website/templates/master.html
+++ b/website/templates/master.html
@@ -94,7 +94,7 @@
 <ul class="topbar" x-data="master">
 	<li class="static"><p>Selected Ruleset: </p></li>
 	<li>
-		<select name="current_ruleset" id="current_ruleset" x-model="selected" x-init="init_selected()">
+		<select name="current_ruleset" id="current_ruleset"" x-init="init_selected({{ user.current_ruleset }})">
 			<option value="1">5e SRD</option>
 			{% for ruleset in user.rulesets %}
 			<option value="{{ ruleset.id }}">{{ ruleset.name }}</option>
@@ -104,8 +104,9 @@
 			{% endfor %}
 		</select>
 	</li>
-	<li><a @click="test()">Change Rulesets</a></li>
+	<li><a @click="changeRuleset()">Change Rulesets</a></li>
 </ul>
+<h1>{{ user.current_ruleset }}</h1>
 {% block body %}{% endblock %}
 </body>
 </html>
