added adding race functionality; still need to idiot-proof

--- a/website/templates/create-category.html
+++ b/website/templates/create-category.html
@@ -9,12 +9,12 @@
     <div class="flex vertical start">
         <h1>Create Rule Category for {{ cruleset.name }}</h1>
         <form class="flex vertical start" method="post">
-            <input 
+            <a><input 
                 type="text"
                 name="name"
                 id="id"
                 placeholder="Rule Category Name">
-            </input>
+            </input></a>
             <a><button type=submit>Create Category</button></a>
         </form>
     </div>
