--- a/website/templates/master.html
+++ b/website/templates/master.html
@@ -91,6 +91,10 @@
 		{% endfor %}
 	{% endif %}
 {% endwith %}
+
+<div id="jsflash">
+</div>
+
 <ul class="topbar" x-data="master">
 	<li class="static"><p>Selected Ruleset: </p></li>
 	<li>
