--- a/website/templates/create-race.html
+++ b/website/templates/create-race.html
@@ -44,11 +44,11 @@
 			<div class="interior flex horizontal center">
 				<!-- Height -->
 				<div class="interior flex horizontal center" style="width: 50%">
-					<div style="width: 50%; min-width: 220px" class="interior flex vertical start">
+					<div style="width: 50%; min-width: 180px" class="interior flex vertical start">
 						<label for="base_height">Base Height</label>
 						<input style="font-size: 16px" type="number" id="base_height" name="base_height" x-model="base_height">
 					</div>
-					<div style="width: 50%; min-width: 220px" class="interior flex vertical start">
+					<div style="width: 50%; min-width: 200px" class="interior flex vertical start">
 						<label for="height_num">Height Dice</label>
 						<div class="interior flex horizontal center" style="max-width: 250px">
 							<input style="width: calc(100% / 3 - 24px); min-width: 55px; font-size: 16px" type="number" id="height_num" name="height_num">
@@ -59,11 +59,11 @@
 				</div>
 				<!-- Weight -->
 				<div class="interior flex horizontal center" style="width: 50%">
-					<div style="width: 50%; min-width: 220px" class="interior flex vertical start">
+					<div style="width: 50%; min-width: 180px" class="interior flex vertical start">
 						<label for="base_height">Base Weight</label>
 						<input style="font-size: 16px" type="number" id="base_weight" name="base_weight" x-model="base_weight">
 					</div>
-					<div style="width: 50%; min-width: 220px" class="interior flex vertical start">
+					<div style="width: 50%; min-width: 180px" class="interior flex vertical start">
 						<label for="weight_num">Race Height Dice</label>
 						<div class="interior flex horizontal center" style="max-width: 250px">
 							<input style="width: calc(100% / 3 - 24px); min-width: 55px; font-size: 16px" type="number" id="weight_num" name="weight_num">
@@ -88,7 +88,7 @@
 				<div class="interior flex vertical start" style="width: 100%">
 					<div class="interior flex horizontal center">
 						<input type="text" placeholder="Feature Name" x-model="feature.name" style="width: 50%; min-width: 250px;">
-						<a @click="removeFeature(index)"><button type="button">Remove Feature</button></a>
+						<a @click="removeFeature(index)"><button type="button" class="mild danger">Remove Feature</button></a>
 					</div>
 					<textarea placeholder="Race feature text." style="height: 100px" x-model="feature.text"></textarea>
 				</div>
@@ -110,7 +110,7 @@
 							<!-- Subrace Name, Buttons -->
 							<div class="interior flex horizontal center" style="width: 100%">
 								<input type="text" placeholder="Subrace Name" x-model="subrace.name" style="width: calc(100% / 3 - 24px); min-width: 250px;">
-								<a @click="removeSubrace(index)" style="width: calc(100% / 3 - 24px); min-width: 250px"><button type="button">Remove Subrace</button></a>
+								<a @click="removeSubrace(index)" style="width: calc(100% / 3 - 24px); min-width: 250px"><button type="button" class="mild danger">Remove Subrace</button></a>
 								<a @click="addSubraceFeature(index)" style="width: calc(100% / 3 - 24px); min-width: 250px"><button type="button">Add Feature</button></a>
 							</div>
 							<!-- Subrace Flavor Text -->
@@ -121,7 +121,7 @@
 									<!-- Feature name, actions -->
 									<div class="interior flex horizontal center" style="width: 100%">
 										<input type="text" placeholder="Subrace Feature Name" x-model="feature.name" style="width: 50%; min-width: 250px; font-size: 16px">
-										<a @click="removeSubraceFeature(findex)"><button type="button">Remove Feature</button></a>
+										<a @click="removeSubraceFeature(findex)"><button type="button" class="mild danger">Remove Feature</button></a>
 									</div>
 									<textarea placeholder="Subrace feature text." style="height: 100px" x-model="feature.text"></textarea>
 								</div>
