updated licenses, readme

--- a/website/templates/backgrounds.html
+++ b/website/templates/backgrounds.html
@@ -23,14 +23,23 @@
 		<input type="text" name="tableinput" id="tableinput" placeholder="Search Backgrounds..." x-model="query">
 		<div class="interior flex horizontal center" style="width: calc(100% - 24px); padding: 12px; background-color: var(--nord-inactive); margin: 12px">
 			<form class="interior flex horizontal start" style="width: 100%; box-sizing: border-box; margin: 0px; background-color: inherit">
-				<label for="skills" style="box-sizing: border-box; width: 100%; min-width: 64px" @click="toggleSkills()"><a>Skills:</a></label>
+				<div class="interior flex horizontal center" style="width: 100%; background-color: inherit">
+					<label for="skills" style="box-sizing: border-box; width: 50%; min-width: 64px; background-color: inherit" @click="toggleSkills()"><a>Skills:</a></label>
+					<div class="interior flex horizontal end" style="box-sizing: border-box; width: 50%; min-width: 64px; margin: 0; background-color: inherit">
+						<label for="filtertype" style="box-sizing: border-box; max-width: 128px">Filter Type: </label>
+						<select name="filtertype" id="filtertype" style="box-sizing: border-box; max-width: 96px" x-model="filtertype">
+							<option value="true">AND</option>
+							<option value="false">OR</option>
+						</select>
+					</div>
+				</div>
 				<div name="skills" id="skills" style="width: 100%" x-show="skillshow">
-					<template x-for="(skill, index) in skills">
-						<div>
-							<input type="checkbox" x-model="skilltoggles[index]" style="width: auto">
-							<label x-text="skills[index]"></label>
-						</div>
-					</template>
+					{% for skill in cruleset.skills %}
+					<div>
+						<input type="checkbox" x-model="skilltoggles[{{ loop.index0 }}]" style="width: auto">
+						<label>{{ skill.name }}</label>
+					</div>
+					{% endfor %}
 				</div>
 			</form>
 		</div>
